hphp/hack/test/typecheck/shape30.php.exp
File "shape30.php", line 11, characters 9-11:
The field y is undefined (Typing[4108])
File "shape30.php", line 10, characters 17-21:
You might want to check this out
